--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="skill-card">
                 <div class="skill-icon">🐍</div>
                 <h4>Python</h4>
-                <p>Advanced</p>
+                <p>Intermediate</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">☕</div>
@@ -114,12 +114,12 @@
             <div class="skill-card">
                 <div class="skill-icon">⚛️</div>
                 <h4>React.js</h4>
-                <p>Frontend</p>
+                <p>Frontend (basics)</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">🟢</div>
                 <h4>Node.js</h4>
-                <p>Backend</p>
+                <p>Backend (basics)</p>
             </div>
             <div class="skill-card">
                 <div class="skill-icon">🔧</div>
@@ -217,7 +217,7 @@
         </div>
     </section>
 
-    <!-- Footer -->
+    
     <footer>
         <p>&copy; 2025 Akhilesh M P. All rights reserved.</p>
         <p style="margin-top: 0.5rem; font-size: 0.9rem;">Built with passion and precision</p>
