--- a/basic/index.html
+++ b/basic/index.html
@@ -141,8 +141,8 @@
                 <div class="contact-links">
                     <a href="mailto:akhilesh.mp2024aiml@sece.ac.in">📧 Email Me</a>
                     <a href="tel:+919791485630">📱 Call Me</a>
-                    <a href="#">💼 LinkedIn</a>
-                    <a href="#">💻 GitHub</a>
+                    <a href="https://www.linkedin.com/in/akhilesh-m-p?utm_source=share_via&utm_content=profile&utm_medium=member_ios">💼 LinkedIn</a>
+                    <a href="https://github.com/akhil151">💻 GitHub</a>
                 </div>
                 <a href="mailto:akhilesh.mp2024aiml@sece.ac.in" class="btn btn-primary">Send Message</a>
             </div>
